--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+* {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Montserrat", sans-serif;
